# python_mmdt

./: .gitignore  MANIFEST.in  README.md  README_CN.md  __about__.py  setup.py
python_mmdt/: __init__.py
python_mmdt/mmdt/: __init__.py  common.py  feature.py  mmdt.py  mmdt_feature.data  mmdt_feature.label  run.py  serialized.py
python_mmdt/mmdt-lib/: CMakeLists.txt  core.c  core.h  imPlatform.h  imaging.h  resample.c  storage.c
tests/: test_mmdt.py
