CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(mmdt)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -fPIC")
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c99 -fPIC")
ADD_LIBRARY(resample resample.c)
ADD_LIBRARY(storage storage.c)
ADD_LIBRARY(core SHARED core.c)
TARGET_LINK_LIBRARIES(resample storage m)
TARGET_LINK_LIBRARIES(core resample)